tests/integration/features/html/parallelization/06_parallelization_sdoc_parsing_problem_in_child_process/test.itest
#
# @relation(SDOC-SRS-1, scope=file)
#

RUN: %expect_exit 1 %strictdoc export %S --output-dir %T | filecheck %s --dump-input=fail

CHECK: error: Could not parse file: {{.*}}input1.sdoc:1:1: Expected '[DOCUMENT]' => '*THIS DOCUM'
